# linearization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: cmake.yml  documentation.yml  test.yml
dependencies/: CMakeLists.txt  cli11.cmake  gtest.cmake  mc++.cmake  mcpp.patch  spdlog.cmake
doc/: CMakeLists.txt  config.in
examples/: CMakeLists.txt  example_simpleSystem.cpp  simple_example_matrices.h  simple_monomials.h
src/analysis/: CMakeLists.txt
src/analysis/include/analysis/: Analyzer.h  Analyzer.tpp  types.h
src/linearization/: CMakeLists.txt  library.cpp  mcCormick.cpp  uniformRandom.cpp
src/linearization/include/: library.h
src/linearization/include/linearization/: Conversion.h  LinearizationResult.h  Settings.h  mcCormick.h  mcCormick.tpp  types.h
src/linearization/include/linearization/heuristics/: uniformRandom.h
src/linearization/include/mcpp/: mcCormick.h
src/linearization/mcpp/: mcCormick.cpp
src/tool/: CMakeLists.txt  main.cpp  prove.g
src/utility/: CMakeLists.txt
src/utility/include/utility/: Exceptions.h
test/: CMakeLists.txt  test_gtest.cpp
test/analysis/: CMakeLists.txt  test_analysis.cpp
test/linearization/: CMakeLists.txt  test_heuristics.cpp  test_relaxation.cpp
